# DazToRuntime

./: .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt  DzRuntimePluginAction.cpp  DzRuntimePluginAction.h
DAZ_STUDIO/VER_1.1.0.1/plugins/: dzunrealbridge.ilk
ENGINE_4.25.4/VER_3.0/DazToUnreal/Binaries/Win64/: UE4Editor.modules
ENGINE_4.25.4/VER_3.0/DazToUnreal/Content/: Genesis3JCMPostProcess.uasset
ENGINE_4.25.4/VER_3.0/DazToUnreal/Source/DazToUnreal/Public/: DazToUnrealFbx.h  DazToUnrealSettings.h  DazToUnrealUtils.h
ENGINE_4.25.4/VER_4.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.25.4/VER_4.0/DazToUnreal/Source/DazToUnreal/Public/: DazToUnrealMaterials.h
ENGINE_4.25/VER_3.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.25/VER_3.0/DazToUnreal/Content/: Genesis8BaseSkeleton.uasset  Genesis8JCMPostProcess.uasset
ENGINE_4.25/VER_3.0/DazToUnreal/Source/DazToUnreal/: DazToUnreal.Build.cs
ENGINE_4.25/VER_3.0/DazToUnreal/Source/DazToUnreal/Private/: DazToUnreal.cpp  DazToUnrealFbx.cpp  DazToUnrealUtils.cpp
ENGINE_4.25/VER_4.0/DazToUnreal/Content/: PBRSkinParameters.uasset
ENGINE_4.25/VER_4.0/DazToUnreal/Source/DazToUnreal/Private/: DazToUnrealPoses.cpp
ENGINE_4.25/VER_4.1.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.25/VER_4.1.0/DazToUnreal/Binaries/Win64/: UE4Editor.modules
ENGINE_4.25/VER_4.1.0/DazToUnreal/Source/DazToUnreal/Private/: DazToUnrealEnvironment.cpp  DazToUnrealFbx.cpp
ENGINE_4.26.1/VER_4.0.0/DazToUnreal/Source/DazToUnreal/Public/: DazToUnrealFbx.h  DazToUnrealPoses.h
ENGINE_4.26.1/VER_4.1.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.26.1/VER_4.1.0/DazToUnreal/Source/DazToUnreal/Public/: DazToUnreal.h  DazToUnrealUtils.h
ENGINE_4.26/VER_4.0.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.26/VER_4.1.0/DazToUnreal/Source/DazToUnreal/Private/: DazToUnreal.cpp
ENGINE_4.26/VER_4.1.0/DazToUnreal/Source/DazToUnreal/Public/: DazToUnrealSettings.h
ENGINE_4.26/VER_4.2.0/DazToUnreal/: DazToUnreal.uplugin
ENGINE_4.26/VER_4.2.0/DazToUnreal/Binaries/Win64/: UE4Editor.modules
ENGINE_4.26/VER_4.2.0/DazToUnreal/Content/Animation/: Genesis81ArkitExample.uasset
ENGINE_4.26/VER_4.2.0/DazToUnreal/Content/Blueprints/: Genesis8Character.uasset
ENGINE_4.26/VER_4.2.0/DazToUnreal/Source/DazToUnreal/: DazToUnreal.Build.cs
Unity/DazStudioPlugin/: CMakeLists.txt  DzUnityAction.cpp  DzUnityAction.h  DzUnityBridge.rc  DzUnityDialog.cpp  DzUnityDialog.h  DzUnityMorphSelectionDialog.cpp  DzUnityMorphSelectionDialog.h  DzUnitySubdivisionDialog.cpp  DzUnitySubdivisionDialog.h  README.md  pluginmain.cpp  version.h
Unity/DazStudioPlugin/Resources/: resources.qrc
Unity/UnityPlugin/DiffusionProfiles/: GenericDiffusionProfile.asset  IrayUberSkinDiffusionProfile.asset
Unity/UnityPlugin/Editor/: Daz3DBridge.cs  Daz3DDTUImporter.cs  DazJsonHelper.cs
Unity/UnityPlugin/Resources/: ReadMe.txt
Unity/UnityPlugin/Scripts/: Daz3DInstance.cs  Utilities.cs
Unity/UnityPlugin/Scripts/Editor/: DTUConverter.cs  Daz3DBridge.cs  Daz3DDTUImporter.cs  DazCoroutine.cs  DazJSONHelper.cs
Unity/UnityPlugin/Shaders/: DazNoDraw.shader  Hair.shadergraph  Invisible.shader  IrayMetal.shadergraph  IrayUber.shadergraph  IrayUberMetal.shadergraph  IrayUberMetalV2.shadergraph  IrayUberParameters.shadersubgraph  IrayUberSkin.shadergraph  IrayUberSkinV2.shadergraph  IrayUberSpec.shadergraph  IrayUberSpecV2.shadergraph  IrayUberTranslucent.shadergraph  IrayUberTransparent.shadergraph  IrayUberTransparentNoOffset.shadergraph  Wet.shadergraph
Unity/UnityPlugin/Shaders/Helpers/: GetLightDirection.hlsl  LightDirection.shadersubgraph
Unreal/: CMakeLists.txt
Unreal/DazStudioPlugin/: CMakeLists.txt  DzUnrealAction.cpp  DzUnrealAction.h  DzUnrealDialog.cpp  DzUnrealDialog.h  DzUnrealIcon.cpp  DzUnrealMorphSelectionDialog.cpp  DzUnrealMorphSelectionDialog.h  DzUnrealSubdivisionDialog.cpp  DzUnrealSubdivisionDialog.h  README.md  pluginmain.cpp  version.h
Unreal/UnrealPlugin/DazToUnreal/: DazToUnreal.uplugin
Unreal/UnrealPlugin/DazToUnreal/Content/: BaseHairMaterial.uasset  BasePBRSkinMaterial.uasset  DSDBaseMaterial.uasset  Genesis81ARKitMapping.uasset  Genesis81ArkitExample.uasset  Genesis8SimpleCtrlRig.uasset  PBRSkinParameters.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Animation/: CalibrateBlendShapes.uasset  DazMultipliers.uasset  Genesis81ARKitMapping.uasset  Genesis81ArkitExample.uasset  Genesis8FaceFXPoseExample.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Blueprints/: Genesis8Character.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis3/: Genesis3BaseSkeleton.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis3/Animation/: Genesis3JCMPostProcess.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis3/Poses/: Genesis3ToHumanoidPose.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis8/: Genesis8BaseSkeleton.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis8/Animation/: Genesis8FaceFXExample.uasset  Genesis8JCMPostProcess.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis8/CtrlRig/: Genesis8FootIK_CtrlRig.uasset  Genesis8Simple_CtrlRig.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Genesis8/Poses/: Genesis8ToHumanoidPose.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Materials/: MF_AoASubsurfaceParameters.uasset  MF_DazParameters.uasset  MF_IrayUberParameters.uasset  MF_PBRSkinParameters.uasset  MF_omUberParameters.uasset  M_AoASubsurfaceBase.uasset  M_AoASubsurfaceSkin.uasset  M_Base.uasset  M_BaseAlpha.uasset  M_BaseHair.uasset  M_BaseMasked.uasset  M_BasePBRSkin.uasset  M_BaseSSSSkin.uasset  M_BaseScalp.uasset  M_BaseSkin.uasset  M_BaseTessellated.uasset  M_DSDBase.uasset  M_IrayUberBase.uasset  M_IrayUberSkin.uasset  M_NoDraw.uasset  M_omUberBase.uasset  M_omUberSkin.uasset
Unreal/UnrealPlugin/DazToUnreal/Content/Retarget/: CR_G8_BasicFootIK.uasset
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnreal/: DazToUnreal.Build.cs
Unreal/UnrealPlugin/DazToUnreal/Source/DazToUnrealRuntime/: DazToUnrealRuntime.Build.cs
enc_temp_folder/6a78368314534b289560b0c36b376e2d/: DzUnrealMorphSelectionDialog.cpp
(+20 files in other folders)
